[package]
name = "oep8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
ontio-std = { git = "https://github.com/lucas7788/ontio-cdk-1.git", branch = "master44", features = ["bump-alloc"] }


[features]
mock = ["ontio-std/mock"]